# blackmagic

./: .clang-format  .gitignore  LICENSE  README.md  build.zig  build.zig.zon  conanfile.py  flake.nix
.github/workflows/: pages.yaml
book/: .gitignore  Doxyfile.cfg  Makefile  conf.py  pyproject.toml  requirements.txt
book/pages/: 00_compilation.md  01_preprocessor.md  01_simple.md  02_simple.md  02_use.md  03_log.md  04_default.md  05_argcount.md  05_range.md  06_argcount.md  faq.md  index.rst  intro.md  quotes.md  reference.md
book/pages/reference/: arg_count.md  color.md  enum.md  fold.md  index.md  internal.md  log.md  token.md  white.md
book/samples/: 01_hello.c  02_constants.c  02_debug.c  02_functionlike.c  03_condition_fix1.c  03_condition_fixed.c  03_condition_trap.c  03_eval1.c  03_eval2.c  03_eval3.c  03_output_format.c  03_simple_macro.c  03_stringline1.c  03_stringline2.c  03_stringline3.c  03_variadic_macro.c  03_vm1.c  03_vm2.c  03_vm3.c  03_vm_gnu.c  03_vm_portable.c  04_factorial.c  04_ones.c  05_first.c  05_limitation.c  06_first_use.c
extra/: generate.py
extra/chaos-pp/: conanfile.py
extra/order-pp/: conanfile.py
extra/pygment/: lexer.py
extra/sphinx/: preprocessedCodeBlock.py
include/blackmagic/: arg_count.h  blackmagic.h  codegen.h  color.h  enum.h  fold.h  for.h  join.h  log.h  log_structured.h  pair.h  private_for.h  private_tools.h  token.h  tools.h  trace.h  tuple.h  white.h
