[project]
name = "blackmagic-book"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
    "breathe>=4.36.0",
    "myst-parser>=5.1.0",
    "sphinx>=9.0.4",
    "sphinx-book-theme>=1.2.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinxcontrib-mermaid>=2.0.2",
]

[tool.uv]
required-version = ">= 0.7.0"
